# mercadona_tickets_analysis

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
back/: Dockerfile  pyproject.toml  requirements.txt  secrets
back/source/: main.py  mercadona_ticket.py  tickets_analysis.py
front/: Dockerfile
front/source/: package.json
front/source/src/: app.html
front/source/src/routes/: +page.svelte  api.ts  stores.ts  styles.css
front/source/src/routes/components/: Dropzone.svelte  Graph.svelte  HelpTooltip.svelte  LateralMenu.svelte  TicketsAnalysis.svelte
